crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__hermes__approval-recorded.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 18079134507292421312
    source: hermes
    session_id: 20260815_211942_c387aa
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- ModelInfo:
    agent_id: 18079134507292421312
    model: gpt-4o-mini
    effort: ~
- Identity:
    agent_id: 18079134507292421312
    source: hermes
    session_id: 20260815_211942_c387aa
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 18079134507292421312
    tool_use_id: ~
    detail:
      Generic:
        display: "terminal: rm -rf /tmp/pixtuoid-probe"
- Identity:
    agent_id: 18079134507292421312
    source: hermes
    session_id: 20260815_211942_c387aa
    cwd: /private/tmp/pixtuoid-capture/proj
- Waiting:
    agent_id: 18079134507292421312
    reason: delete in root path
- Identity:
    agent_id: 18079134507292421312
    source: hermes
    session_id: 20260815_211942_c387aa
    cwd: /private/tmp/pixtuoid-capture/proj
- Waiting:
    agent_id: 18079134507292421312
    reason: delete in root path
- Identity:
    agent_id: 18079134507292421312
    source: hermes
    session_id: 20260815_211942_c387aa
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 18079134507292421312
    tool_use_id: ~
- Identity:
    agent_id: 18079134507292421312
    source: hermes
    session_id: 20260815_211942_c387aa
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 18079134507292421312
    tool_use_id: ~
- ModelInfo:
    agent_id: 18079134507292421312
    model: gpt-4o-mini
    effort: ~
- Identity:
    agent_id: 18079134507292421312
    source: hermes
    session_id: 20260815_211942_c387aa
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 18079134507292421312
    tool_use_id: ~
    detail:
      Generic:
        display: "terminal: 1"
- Identity:
    agent_id: 18079134507292421312
    source: hermes
    session_id: 20260815_211942_c387aa
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 18079134507292421312
    tool_use_id: ~
- Identity:
    agent_id: 18079134507292421312
    source: hermes
    session_id: 20260815_211942_c387aa
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 18079134507292421312
    tool_use_id: ~
- ModelInfo:
    agent_id: 18079134507292421312
    model: gpt-4o-mini
    effort: ~
