crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__hermes__tool-run.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 14947962463348497696
    source: hermes
    session_id: 20260910_121431_d47f10
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- ModelInfo:
    agent_id: 14947962463348497696
    model: gpt-4o-mini
    effort: ~
- Identity:
    agent_id: 14947962463348497696
    source: hermes
    session_id: 20260910_121431_d47f10
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 14947962463348497696
    tool_use_id: ~
    detail:
      Generic:
        display: "read_file: NOTE.txt"
- Identity:
    agent_id: 14947962463348497696
    source: hermes
    session_id: 20260910_121431_d47f10
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 14947962463348497696
    tool_use_id: ~
    detail:
      Generic:
        display: search_files
- Identity:
    agent_id: 14947962463348497696
    source: hermes
    session_id: 20260910_121431_d47f10
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 14947962463348497696
    tool_use_id: ~
- Identity:
    agent_id: 14947962463348497696
    source: hermes
    session_id: 20260910_121431_d47f10
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 14947962463348497696
    tool_use_id: ~
- Identity:
    agent_id: 14947962463348497696
    source: hermes
    session_id: 20260910_121431_d47f10
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 14947962463348497696
    tool_use_id: ~
    detail:
      Generic:
        display: "read_file: NOTE.txt"
- Identity:
    agent_id: 14947962463348497696
    source: hermes
    session_id: 20260910_121431_d47f10
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 14947962463348497696
    tool_use_id: ~
- Identity:
    agent_id: 14947962463348497696
    source: hermes
    session_id: 20260910_121431_d47f10
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 14947962463348497696
    tool_use_id: ~
- ModelInfo:
    agent_id: 14947962463348497696
    model: gpt-4o-mini
    effort: ~
